--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="from">
                     <p>form</p>
                     <div class="select-container">
-                        <img src="https://flagsapi.com/IN/flat/64.png" alt="">
+                        <img src="https://flagsapi.com/US/flat/64.png" alt="">
                         <select name="from" id="">
                            
                         </select>
